fix : fix overflow animation bug

--- a/src/components/browser/UserList/style.scss
+++ b/src/components/browser/UserList/style.scss
@@ -101,6 +101,7 @@
       flex-direction: row;
       align-items: center;
       gap: 0.5rem;
+      overflow: hidden;
       transition: background-color .2s ease;
 
       svg.indicator {
